double-webapp/deployment-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-app2
  template:
    metadata:
      labels:
        app: apache-app2
    spec:
      containers:
        - name: apache
          image: httpd:2.4
          ports:
            - containerPort: 80
