double-webapp/service-app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app1-service
spec:
  selector:
    app: nginx-app1
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
