double-webapp/service-app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app2-service
spec:
  selector:
    app: apache-app2
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
